--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -5,6 +5,11 @@
     max-height: 20rem;
     overflow: auto;
   }
+
+  .items {
+    display: flex;
+    justify-content: space-between;
+  }
   
   .total {
     display: flex;
